--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="Message2">Max travel time</string>
     <string name="Message3">Mode of transport</string>
     <string name="button_send">Send</string>
+    <string name="Weather">weather</string>
 </resources>
