--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="Message3">Mode of transport</string>
     <string name="button_send">Send</string>
     <string name="Weather">weather</string>
+    <string-array name="transport">
+        <item>Walking</item>
+        <item>Driving</item>
+        <item>Cycling</item>
+    </string-array>
 </resources>
