--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,9 @@
 <resources>
-    <string name="app_name">GPSPractice</string>
+    <string name="app_name">AndroidICA</string>
     <string name="title_activity_maps">Map</string>
     <string name="Message1">Enter location</string>
     <string name="Message2">Max travel time</string>
     <string name="Message3">Mode of transport</string>
     <string name="button_send">Send</string>
     <string name="Weather">weather</string>
-    <string-array name="transport">
-        <item>Walking</item>
-        <item>Driving</item>
-        <item>Cycling</item>
-    </string-array>
 </resources>
